--- a/src/sass/materialize.scss
+++ b/src/sass/materialize.scss
@@ -24,15 +24,15 @@
 // @import "components/tooltip";
 @import "components/buttons";
 // @import "components/dropdown";
-// @import "components/waves";
+@import "components/waves";
 // @import "components/modal";
 // @import "components/collapsible";
 // @import "components/chips";
 // @import "components/materialbox";
-// @import "components/forms/forms";
+@import "components/forms/forms";
 // @import "components/table_of_contents";
 @import "components/sidenav";
-// @import "components/preloader";
+@import "components/preloader";
 // @import "components/slider";
 // @import "components/carousel";
 // @import "components/tapTarget";
