--- a/src/style.sass
+++ b/src/style.sass
@@ -38,3 +38,77 @@ body
         bottom: -61px
     @media #{$extra-large-and-up}
         bottom: -63px
+
+.image-preloader
+    justify-content: center
+    padding: 15px
+
+.project-link
+    i.material-icons
+        margin-left: 5px
+
+.tech-section
+    position: absolute
+    width: 100%
+    left: 0
+    bottom: 0
+    @media #{$large-and-up}    
+        overflow: hidden
+        top: 0
+        right: 0
+
+    .tech-list
+        height: 2.5rem
+        display: grid
+        grid-auto-flow: column
+        overflow-x: scroll
+        width: 100%
+        border-top: solid 1px grey
+        @media #{$large-and-up}
+            background: white
+            transform: translateX(100%)  
+            width: 100%
+            height: 100%
+            grid-auto-flow: row
+            grid-template-columns: 1fr 1fr 1fr
+            padding: 15px 
+            transition: .35s
+            &:hover
+                transform: translateX(0)
+        
+    .tech-title
+        position: absolute
+        line-height: 2rem
+        height: 2rem
+        bottom: 2.5rem
+        left: 30px
+        font-size: 2rem
+        text-align: center
+        opacity: .5
+        @media #{$large-and-up}
+            transition: .32s
+            bottom: 3.5rem
+            &:hover
+                transform: rotateX(90deg)
+                &+.tech-list
+                    transform: translateX(0)
+    .tech 
+        text-align: center
+        width: 100%
+        border-right: solid 1px grey
+        padding: 5px 15px
+        transition: background .35s
+        &:last-of-type
+            border-width: 0
+        &:hover
+            background: rgba(0, 0, 0, .3)
+        @media #{$large-and-up}   
+            border: none
+            justify-content: center
+
+.b-validation
+    label
+        margin-right: 15px
+
+.btn
+    margin-right: 5px
